--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,5 @@
 {
-  "serviceName": "Service name goes here",
+  "serviceName": "Apply for a cheese juggling license",
   "useServiceNavigation": true,
   "plugins": {
     "govuk-frontend": {
